--- a/src/subscription/_vars.scss
+++ b/src/subscription/_vars.scss
@@ -33,3 +33,4 @@ $color-grey: hsl($color-grey-h, $color-grey-s, $color-grey-l);
 
 $color-light-grey: #dcdcdc;
 $color-dark-grey: #636363;
+$color-dark-red: #d60036;
