--- a/src/subscription/style.scss
+++ b/src/subscription/style.scss
@@ -39,6 +39,10 @@
         border-color: $color-grey !important;
     }
 
+    .u-text-error {
+        color: $color-dark-red !important;
+    }
+
     .u-text-center {
         text-align: center !important;
     }
