--- a/includes/templates/subscription/cancel-change.html
+++ b/includes/templates/subscription/cancel-change.html
@@ -1,4 +1,4 @@
-<div class="rrze-newsl-subsc">
+<div class="rrze-newsletter-subscription">
     <div class="o-container o-container--mw700 u-py-60">
         <div class="u-bb u-bc-spacer u-mb-24 u-pb-24 u-text-center">
             <h2 class="c-content-heading u-mb-6 u-text-black u-text-center">
@@ -22,11 +22,11 @@
 
             {{=nonce_field}}
             <div class="u-block u-text-center">
-                <button type="submit" class="newsl-subsc-btn u-py-18 u-px-18 u-mr-12 u-caps"
-                    formaction="{{=formaction_cancel}}" formmethod="post">
+                <button type="submit" class="btn u-py-18 u-px-18 u-mr-12 u-caps" formaction="{{=formaction_cancel}}"
+                    formmethod="post">
                     {{=button_cancel_label}}
                 </button>
-                <button type="submit" class="newsl-subsc-btn u-py-18 u-px-18 u-caps" formaction="{{=formaction_change}}"
+                <button type="submit" class="btn u-py-18 u-px-18 u-caps" formaction="{{=formaction_change}}"
                     formmethod="post">
                     {{=button_change_label}}
                 </button>
