--- a/includes/templates/subscription/notice.html
+++ b/includes/templates/subscription/notice.html
@@ -1,4 +1,4 @@
-<div class="rrze-newsl-subsc">
+<div class="rrze-newsletter-subscription">
     <div class="o-container o-container--mw700 u-py-60">
         <div class="u-bb u-bc-spacer u-mb-24 u-pb-24 u-text-center">
             <h2 class="c-content-heading u-mb-6 u-text-black u-text-center">
