--- a/src/subscription/style.scss
+++ b/src/subscription/style.scss
@@ -1,6 +1,6 @@
 @import "vars";
 
-.rrze-newsl-subsc {
+.rrze-newsletter-subscription {
     .c-content-heading {
         line-height: 1.3;
     }
@@ -37,6 +37,10 @@
 
     .u-mb-6 {
         margin-bottom: 6px !important;
+    }
+
+    .u-mb-12 {
+        margin-bottom: 12px !important;
     }
 
     .u-mb-24 {
@@ -135,31 +139,26 @@
         font-size: 0.9em !important;
     }
 
-    .newsl-subsc-checkbox__label:before {
+    .checkbox__label:before {
         content: "";
         width: 18px;
         height: 18px;
     }
 
-    .newsl-subsc-list__info {
+    .list__info {
         margin-top: 6px;
         color: $color-dark-grey;
         font-weight: 400;
         line-height: 1.5;
     }
 
-    .newsl-subsc-list__title {
+    .list__title {
         display: inline-block;
         font-weight: 500;
     }
 
-    .newsl-subsc-list--disabled {
+    .list--disabled {
         opacity: 0.5;
-    }
-
-    .newsl-subsc-checkbox__label {
-        position: relative;
-        padding-left: 32px;
     }
 
     h1,
@@ -179,7 +178,7 @@
         margin: 0 !important;
     }
 
-    .newsl-subsc-btn {
+    .btn {
         display: inline;
         margin: auto;
         border: 0;
@@ -192,19 +191,24 @@
         appearance: none;
     }
 
-    .newsl-subsc-btn:active {
+    .btn:active {
         transform: scale(0.98);
     }
 
-    .newsl-subsc-btn:hover {
+    .btn:hover {
         background-color: $color-light-grey;
     }
 
-    input[type="email"] {
+    .checkbox__label {
+        position: relative;
+        padding-left: 32px;
+    }
+
+    [type="email"] {
         width: 100%;
     }
 
-    input[type="checkbox"] {
+    [type="checkbox"] {
         margin: 0 !important;
     }
 
@@ -273,7 +277,7 @@
             text-align: left !important;
         }
 
-        .newsl-subsc-btn {
+        .btn {
             margin: 0 !important;
             margin-top: 6px !important;
             width: 100% !important;
