--- a/src/newsletter-editor/sidebar/style.scss
+++ b/src/newsletter-editor/sidebar/style.scss
@@ -31,6 +31,7 @@
     }
 
     &__subject-textcontrol,
+    &__recipient-textcontrol,
     &__to-selectcontrol,
     &__sendmode-radiocontrol {
         .components-base-control__label {
