--- a/includes/templates/newsletter.mjml
+++ b/includes/templates/newsletter.mjml
@@ -5,7 +5,7 @@
             /* Paragraph */
             p {
                 margin-top: 0 !important;
-                margin-bottom: 0 !important;
+                margin-bottom: 10px !important;
             }
 
             /* Link */
@@ -34,7 +34,7 @@
             h4 { font-size: 1.25em; line-height: 1.5; }
             h5 { font-size: 1em; line-height: 1.8; }
             h6 { font-size: 0.8em; line-height: 1.8; }
-            h1, h2, h3, h4, h5, h6 { margin-top: 0; margin-bottom: 0; }
+            h1, h2, h3, h4, h5, h6 { margin-top: 20px; margin-bottom: 0; }
 
             /* List */
             ul, ol {
@@ -67,14 +67,14 @@
 
             /* Image */
             @media all and (max-width: 590px) {
-            img {
-            height: auto !important;
-            }
+                img {
+                    height: auto !important;
+                }
             }
 
             /* Social links */
             .social-element img {
-            border-radius: 0 !important;
+                border-radius: 0 !important;
             }
 
             /* Has Background */
