--- a/src/components/newsletter-preview/style.scss
+++ b/src/components/newsletter-preview/style.scss
@@ -1,5 +1,6 @@
 .rrze-newsletter__layout-preview {
-    width: 100%;
+    border: 2px solid transparent;
     height: 100%;
+    width: 100%;
     position: absolute;
 }
