--- a/includes/templates/newsletter.mjml
+++ b/includes/templates/newsletter.mjml
@@ -10,7 +10,7 @@
 
             /* Link */
             a {
-                color: inherit !important;
+                color: inherit;
                 text-decoration: underline;
             }
 
@@ -26,12 +26,42 @@
 
             /* Button */
             .is-style-outline a {
-                background: #fff !important;
+                background: #fff;
                 border: 2px solid !important;
                 display: block !important;
             }
 
             /* Heading */
+            h1 {
+                font-size: 2.44em;
+                line-height: 1.4;
+            }
+
+            h2 {
+                font-size: 1.95em;
+                line-height: 1.4;
+            }
+
+            h3 {
+                font-size: 1.56em;
+                line-height: 1.4;
+            }
+
+            h4 {
+                font-size: 1.25em;
+                line-height: 1.5;
+            }
+
+            h5 {
+                font-size: 1em;
+                line-height: 1.8;
+            }
+
+            h6 {
+                font-size: 0.8em;
+                line-height: 1.8;
+            }
+
             h1,
             h2,
             h3,
@@ -42,34 +72,46 @@
                 margin-bottom: 0;
             }
 
-            h1 {
-                font-size: 2.44em;
-                line-height: 1.24;
+            /* Fonts Sizes */
+            .has-small-font-size {
+                font-size: 13px;
             }
 
-            h2 {
-                font-size: 1.95em;
-                line-height: 1.36;
+            .has-normal-font-size {
+                font-size: 16px;
             }
 
-            h3 {
-                font-size: 1.56em;
-                line-height: 1.44;
+            .has-medium-font-size {
+                font-size: 20px;
             }
 
-            h4 {
-                font-size: 1.25em;
-                line-height: 1.6;
+            .has-large-font-size {
+                font-size: 36px;
             }
 
-            h5 {
-                font-size: 1em;
-                line-height: 1.5em;
+            .has-huge-font-size {
+                font-size: 42px;
             }
 
-            h6 {
-                font-size: 0.8em;
-                line-height: 1.56;
+            /* Padding */
+            .has-small-padding {
+                padding-bottom: 5px;
+            }
+
+            .has-normal-padding {
+                padding-bottom: 10px;
+            }
+
+            .has-medium-padding {
+                padding-bottom: 15px;
+            }
+
+            .has-large-padding {
+                padding-bottom: 25px;
+            }
+
+            .has-huge-padding {
+                padding-bottom: 35px;
             }
 
             /* List */
@@ -81,25 +123,20 @@
             }
 
             /* Quote */
-            blockquote,
             .wp-block-quote {
-                background: transparent;
-                border-left: 0.25em solid;
+                border-left: 4px solid #000;
                 margin: 0;
-                padding-left: 24px;
+                padding-left: 20px;
             }
 
-            blockquote cite,
             .wp-block-quote cite {
                 color: #767676;
             }
 
-            blockquote p,
             .wp-block-quote p {
                 padding-bottom: 12px;
             }
 
-            .wp-block-quote.is-style-plain,
             .wp-block-quote.is-style-large {
                 border-left: 0;
                 padding-left: 0;
@@ -129,6 +166,7 @@
                 padding: 12px;
             }
         </mj-style>
+
         {{preview_text}}
         <mj-preview>{{=preview_text}}</mj-preview>
         {{/preview_text}}
